    will be raised when attempting to access HTTPS resources.  Feature request
    by André Arko

* Bug fixes
  * Explain the proper way of sending parameters depending upon the request
    method.  Issue #35 by André Arko.
  * Handle Errno::ETIMEDOUT by retrying the request.  Issue #36 by André Arko.
  * Requests retried by ruby 2.x are no longer retried by net-http-persistent.

=== 2.8 / 2012-10-17

* Minor enhancements
  * Added Net::HTTP::Persistent::detect_idle_timeout which can be used to
    determine the idle timeout for a host.
  * The read timeout may now be updated for every request.  Issue #33 by
    Mislav Marohnić
  * Added NO_PROXY support.  Pull Request #31 by Laurence Rowe.
  * Added #cert and #key aliases for Net::HTTP compatibility.  Pull request
    #26 by dlee.
  * The artifice gem now disables SSL session reuse to prevent breakage of
    testing frameworks.  Pull Request #29 by Christopher Cooke.
  * Disabled Net::HTTP::Persistent::SSLReuse on Ruby 2+.  This feature is now
    built-in to Net::HTTP.
* Bug fixes
  * Socket options are set again following connection reset.  Pull request #28
    by cmaion.
  * #shutdown now works even if no connections were made.  Pull Request #24 by
    James Tucker.
  * Updated test RSA key size to 1024 bits.  Bug #25 by Gunnar Wolf.
  * The correct host:port are shown in the exception when a proxy connection
    fails.  Bug #30 by glebtv.

=== 2.7 / 2012-06-06

* Minor enhancement
  * Added JRuby compatibility by default for HTTPS connections.  (JRuby lacks
    OpenSSL::SSL::Session.)

=== 2.6 / 2012-03-26

* Minor enhancement
  * Net::HTTP::Persistent#idle_timeout may be set to nil to disable expiration
    of connections.  Pull Request #21 by Aaron Stone

=== 2.5.2 / 2012-02-13

* Bug fix
  * Fix variable shadowing warning.

=== 2.5.1 / 2012-02-10

* Bug fix
  * Reusing SSL connections with HTTP proxies now works.  Issue #15 by Paul
    Ingham and mcrmfc

=== 2.5 / 2012-02-07

* Minor enhancements